--- a/comicsdb/templates/comicsdb/creator_list.html
+++ b/comicsdb/templates/comicsdb/creator_list.html
@@ -76,10 +76,10 @@
                   <figure class="image is-square">
                     {% if creator.image %}
                       {% thumbnail creator.image "256x256" crop="center" format="WEBP" as im %}
-                        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt = "{{ creator.name }}">
+                        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt = "{{ creator.get_full_name}}">
                       {% endthumbnail %}
                     {% else %}
-                      <img src="{% static 'site/img/creator-not-found.webp' %}" alt="No image for {{ creator.name }}">
+                      <img src="{% static 'site/img/creator-not-found.webp' %}" alt="No image for {{ creator.get_full_name }}">
                     {% endif %}
                   </figure>
                 </div>
