Add statistic chart for issues per year count

--- a/comicsdb/templates/comicsdb/statistics.html
+++ b/comicsdb/templates/comicsdb/statistics.html
@@ -21,19 +21,22 @@
 <section>
   <div class="container">
     <div class="box">
-      {% pie_chart publisher_counts with id='chart-1', library={'title':'Publisher Percentage of Issues', 'sliceVisibilityThreshold': '.02', 'legend': 'bottom'} %}
+      {% pie_chart yearly_count with id='chart-1' library={"title": "Number of Issues Added per Year",} %}
     </div>
     <div class="box">
-      {% column_chart daily_issue_count with id='chart-2' library={"title":"Daily Count of Issues Added",} %}
+      {% pie_chart publisher_counts with id='chart-2', library={'title':'Percentage of Issues by Publisher', 'sliceVisibilityThreshold': '.02'} %}
     </div>
     <div class="box">
-      {% column_chart monthly_issue_count with id='chart-3' library={"title":"Monthly Count of Issues Added",} %}
+      {% column_chart daily_issue_count with id='chart-3' library={"title":"Number of Issue Added by Date",} %}
     </div>
     <div class="box">
-      {% column_chart monthly_creator with id='chart-4' library={"title":"Monthly Count of Creators Added",} %}
+      {% column_chart monthly_issue_count with id='chart-4' library={"title":"Number of Issues Added by Month",} %}
     </div>
     <div class="box">
-      {% column_chart monthly_character with id='chart-5' library={"title":"Monthly Count of Characters Added",} %}
+      {% column_chart monthly_creator with id='chart-5' library={"title":"Number of Creators Added by Month",} %}
+    </div>
+    <div class="box">
+      {% column_chart monthly_character with id='chart-6' library={"title":"Number of Characters Add by Month",} %}
     </div>
   </div>
 </section>
