Add goatcounter script

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,5 +30,6 @@
     {% include "footer.html" %}
 
     {% block js %}{% endblock %}
+    <script data-goatcounter="https://metron.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
   </body>
 </html>
