--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load thumbnail %}
 {% load flatpages %}
 <nav class="navbar is-link is-fixed-top" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
@@ -114,12 +115,23 @@
     <div class="navbar-end">
       {% if user.is_authenticated %}
       <div class="navbar-item has-dropdown is-hoverable">
-        {% if user.get_full_name %}
-          <a class="navbar-link">{{ user.get_full_name }}</a>
+        {% if user.image %}
+          <a class="navbar-link">
+            {% thumbnail user.image "32x32" crop="center" format="WEBP" as im %}
+            <figure class="image is-32x32">
+              <img class="is-rounded" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ user.username }}">
+            </figure>
+            {% endthumbnail %}
+            {% if user.get_full_name %}
+              <span>&nbsp;&nbsp;{{ user.get_full_name }}</span>
+            {% else %}
+              <span>&nbsp;&nbsp;{{ user.username }}</span>
+            {% endif %}
+          </a>
         {% else %}
           <a class="navbar-link">{{ user.username }}</a>
         {% endif%}
-        <div class="navbar-dropdown">
+        <div class="navbar-dropdown is-right">
           <a class="navbar-item" href="">
             <span class="icon">
               <i class="fas fa-user-cog"></i>
