--- a/comicsdb/templates/comicsdb/publisher_detail.html
+++ b/comicsdb/templates/comicsdb/publisher_detail.html
@@ -141,7 +141,9 @@
            <p>No information available.</p>
            <br/>
         {% endif %}
-        <div class="content is-small is-italic">Last edited on {{ publisher.modified }} by {{ publisher.edited_by.username }}</div>
+        <div class="content is-small is-italic">
+          Last edited on {{ publisher.modified }} by <a href="{% url 'user-detail' publisher.edited_by.id %}">{{ publisher.edited_by.username }}</a>
+        </div>
       </div>
     </div>
     <!-- end of publisher summary -->
