Add some info about mokkari to the home page

--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -46,11 +46,15 @@
             <a href="{% url 'contact:email' %}">contact</a> me.
           </h2>
           <br />
+          <h1 class="title is-5">Want to use Metron's API?</h1>
+          <h2 class="subtitle is-6">
+            If you want to use the data from Metron, there is a <a href="https://www.python.org/">Python</a> wrapper called <a href="https://github.com/bpepple/mokkari">Mokkari</a> to make it easy to use the API.
+          </h2>
+          <br />
           <h1 class="title is-5">Need to tag your comic archives?</h1>
           <h2 class="subtitle is-6">
             If you wish to tag your comic archives with metadata from Metron, head over Github
-            and install <a href="https://github.com/bpepple/metron-tagger">Metron-Tagger</a>. <b>Note:</b>
-            you need an account on Metron to access the REST API.
+            and install <a href="https://github.com/bpepple/metron-tagger">Metron-Tagger</a>.
           </h2>
         </div>
         <!-- end info box -->
