Highlight issue_form credits error

--- a/comicsdb/templates/comicsdb/issue_form.html
+++ b/comicsdb/templates/comicsdb/issue_form.html
@@ -74,7 +74,9 @@
                 {{ hidden }}
               {% endfor %}
             {% endif %}
-            {{ field.errors.as_ul }}
+            {% for error in field.errors %}
+            <strong class="has-text-danger">{{ error }}</strong>
+            {% endfor %}
             <div class="field">
               {% if field|is_select %}
                 <div class="control is-expanded">
