Use hcaptcha instead of recaptcha.

--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -4,7 +4,7 @@
 {% block title %}Sign Up{% endblock %}
 
 {% block headscripts %}
-<script src='https://www.google.com/recaptcha/api.js'></script>
+<script src="https://hcaptcha.com/1/api.js" async defer></script>
 {% endblock %}
 
 {% block content %}
@@ -39,7 +39,7 @@
           </div>
         {% endfor %}
         <div class="field">
-          <div class="g-recaptcha" data-sitekey="6Le4GdEZAAAAAGEkw8Jia1dDHs8-0lUBe_jwKupZ"></div>
+          <div class="h-captcha" data-sitekey="32255603-3eb7-4897-b7f7-65b8874a261e"></div>
         </div>
         <div class="field">
           <div class="control">
