Add sections with link to discussions page.

--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -31,11 +31,9 @@
           <h1 class="title is-5">Why?</h1>
           <h2 class="subtitle is-6">
             Currently the only comic book database the provides a REST API for users is
-            <a href="https://comicvine.gamespot.com/">Comic Vine</a>.
-            Unfortunately, since it's a corporately-owned service, the community that uses it has no
-            control
-            over the amount of resources provided to maintain it or ensure it's continued
-            accessibility.
+            <a href="https://comicvine.gamespot.com/">Comic Vine</a>. Unfortunately, since it's a corporately-owned service, 
+            the community that uses it has no control over the amount of resources provided to maintain it or ensure it's 
+            continued accessibility.
           </h2>
           <br />
           <h1 class="title is-5">Want to join?</h1>
@@ -55,6 +53,12 @@
           <h2 class="subtitle is-6">
             If you wish to tag your comic archives with metadata from Metron, head over Github
             and install <a href="https://github.com/bpepple/metron-tagger">Metron-Tagger</a>.
+          </h2>
+          <br />
+          <h1 class="title is-5">Questions?</h1>
+          <h2 class="subtitle is-6">
+            Have questions not covered here or suggestions? If so, head over to the 
+            <a href="https://github.com/bpepple/metron/discussions">Discussions</a> page at Github and ask there.
           </h2>
         </div>
         <!-- end info box -->
