--- a/comicsdb/templates/comicsdb/creator_detail.html
+++ b/comicsdb/templates/comicsdb/creator_detail.html
@@ -6,6 +6,16 @@
 {% block title %}{{ creator.name }}{% endblock title %}
 
 {% block comic_content %}
+  <!-- creator title -->
+  <nav class="level">
+    <div class="level-left">
+      <div class="level-item">
+        <p class="title">{{ creator.name }}</p>
+      </div>
+    </div>
+  </nav>
+  <!--  end creator title -->
+
   <!-- creator nav -->
   <nav class="level">
     <div class="level-left">
@@ -42,18 +52,6 @@
             </span>
           </a>
         {% endif %}
-      </div>
-    </div>
-  </nav>
-  <!--  end creator nav -->
-
-  <!-- page header -->
-  <nav class="level">
-    <div class="level-left">
-      <div class="level-item">
-        <div>
-          <p class="title">{{ creator.name }}</p>
-        </div>
       </div>
     </div>
     <div class="level-right">
@@ -96,7 +94,7 @@
     {% endif %}
     </div>
   </nav>
-  <!-- end of page header -->
+  <!-- end of creator nav -->
 
   <!-- main page content -->
   <div class="columns">
