--- a/comicsdb/templates/comicsdb/publisher_detail.html
+++ b/comicsdb/templates/comicsdb/publisher_detail.html
@@ -5,6 +5,16 @@
 {% block title %}{{ publisher.name }}{% endblock title %}
 
 {% block comic_content %}
+  <!-- publisher title -->
+  <nav class="level">
+    <div class="level-left">
+      <div class="level-item">
+        <div><p class="title">{{ publisher }}</p></div>
+      </div>
+    </div>
+  </nav>
+  <!--  end publisher title -->
+
   <!-- publisher nav -->
   <nav class="level">
     <div class="level-left">
@@ -41,16 +51,6 @@
             </span>
           </a>
         {% endif %}
-      </div>
-    </div>
-  </nav>
-  <!--  end publisher nav -->
-
-  <!-- page header -->
-  <nav class="level">
-    <div class="level-left">
-      <div class="level-item">
-        <div><p class="title">{{ publisher }}</p></div>
       </div>
     </div>
     <div class="level-right">
@@ -96,7 +96,7 @@
       {% endif %}
     </div>
   </nav>
-  <!-- end of page header -->
+  <!-- end of publisher nav -->
 
   <!-- main page content -->
   <div class="columns">
