--- a/comicsdb/templates/comicsdb/issue_detail.html
+++ b/comicsdb/templates/comicsdb/issue_detail.html
@@ -329,6 +329,13 @@
             </div>
           {% endif %}
         {% endwith %}
+        {% if issue.price %}
+          <p><b>Cover Price:</b> ${{ issue.price }}</p>
+        {% endif %}
+        {% if issue.sku %}
+          <p><b>Distributor SKU:</b> {{ issue.sku }}</p>
+        {% endif %}
+        <br />
         <p><b>Metron ID:</b> {{ issue.id }}</p>
       </div>
     </div>
