Short UPC label

--- a/comicsdb/templates/comicsdb/issue_detail.html
+++ b/comicsdb/templates/comicsdb/issue_detail.html
@@ -323,7 +323,7 @@
           <p><b>Distributor SKU:</b> {{ issue.sku }}</p>
         {% endif %}
         {% if issue.upc %}
-          <p><b>UPC Code:</b> {{ issue.upc }}</p>
+          <p><b>UPC:</b> {{ issue.upc }}</p>
         {% endif %}
         {% with arcs=issue.arcs.all %}
           {% if arcs %}
