Add links for github & twitter to navbar

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -113,6 +113,16 @@
       </div>
     </div>
     <div class="navbar-end">
+      <a class="navbar-item" href="https://github.com/bpepple/metron" target="_blank">
+        <span class="icon"">
+          <i class="fab fa-lg fa-github"></i>
+        </span>
+      </a>
+      <a class="navbar-item" href="https://twitter.com/MetronDB" target="_blank">
+        <span class="icon">
+          <i class="fab fa-lg fa-twitter"></i>
+        </span>
+      </a>
       {% if user.is_authenticated %}
       <div class="navbar-item has-dropdown is-hoverable">
         {% if user.image %}
