--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -123,6 +123,11 @@
           <i class="fab fa-lg fa-twitter"></i>
         </span>
       </a>
+      <a class="navbar-item" href="https://mastodon.social/@metron" target="_blank">
+        <span class="icon">
+          <i class="fab fa-lg fa-mastodon"></i>
+        </span>
+      </a>
       {% if user.is_authenticated %}
       <div class="navbar-item has-dropdown is-hoverable">
         {% if user.image %}
