--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -39,9 +39,7 @@
           <h1 class="title is-5">Want to join?</h1>
           <h2 class="subtitle is-6">
             Sign-up for an account and read the <a href="{% url 'flatpage:editing-guidelines' %}">Editing
-              Guidelines</a>
-            before adding information to the database. If you have any questions, please
-            <a href="{% url 'contact:email' %}">contact</a> me.
+              Guidelines</a> before adding information to the database.
           </h2>
           <br />
           <h1 class="title is-5">Want to use Metron's API?</h1>
