Make navbar releases label singular

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,13 +21,13 @@
             <span class="icon">
               <i class="fas fa-star"></i>
             </span>
-            <span>This Weeks</span>
+            <span>This Week</span>
           </a>
           <a class="navbar-item" href="{% url 'issue:nextweek' %}">
             <span class="icon">
               <i class="fas fa-bolt"></i>
             </span>
-            <span>Next Weeks</span>
+            <span>Next Week</span>
           </a>
         </div>
       </div>
