--- a/comicsdb/templates/comicsdb/series_detail.html
+++ b/comicsdb/templates/comicsdb/series_detail.html
@@ -123,8 +123,9 @@
     </div>
     <!-- end of series image -->
 
-    <!-- series summary -->
+    <!-- series main info -->
     <div class="column">
+      <!-- series summary -->
       <div class="box">
         <h1 class="title is-5">Summary</h1>
         {% if series.desc %}
@@ -137,8 +138,48 @@
           Last edited on {{ series.modified }} by <a href="{% url 'user-detail' series.edited_by.id %}">{{ series.edited_by.username }}</a>
         </div>
       </div>
+      <!-- end series summary -->
+
+      <!-- creator counts-->
+      {% if creators %}
+      <div class="box">
+        <div class="columns">
+          <div class="column">
+            <h1 class="title is-5">Most Issue Credit{{ creators|pluralize }}</h1>
+            <div class="columns is-multiline">
+              {% for i in creators%}
+              <div class="column is-4">
+                <article class="media">
+                  <div class="media-left">
+                    <figure class="image is-64x64">
+                    {% if i.creators__image %}
+                      {% thumbnail i.creators__image "64x64" crop="top" format="WEBP" as im %}
+                      <img class="is-rounded" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}"  alt="{{ i.creators_name }}">
+                      {% endthumbnail %}
+                    {% else %}
+                      <img class="is-rounded" src="{% static 'site/img/creator-not-found.webp' %}" alt="No image for {{ i.creators_name }}">
+                    {% endif %}
+                    </figure>
+                  </div>
+                  <div class="media-content">
+                    <div class="content">
+                      <a href="{% url 'creator:detail' i.creators__slug %}">{{ i.creators__name }}</a>
+                      <br/>
+                      <small><em>{{ i.count }} issue{{ i.count|pluralize }}</em></small>
+                    </div>
+                  </div>
+                </article>
+              </div>
+              {% endfor %}
+            </div>
+          </div>
+        </div>
+      </div>
+      {% endif %}
+      <!-- end creator counts -->
+
     </div>
-    <!-- end of series summary -->
+    <!-- end series main info -->
 
     <!-- misc info -->
     <div class="column is-one-fifth">
