Update for field name change

--- a/comicsdb/templates/comicsdb/series_detail.html
+++ b/comicsdb/templates/comicsdb/series_detail.html
@@ -240,7 +240,7 @@
       <!-- end series detail info -->
 
       <!-- associated series -->
-      {% with assoc=series.series.all %}
+      {% with assoc=series.associated.all %}
         {% if assoc %}
           <div class="box">
             <h1 class="title is-6">Associated Series</h1>
