Add color to 404 home button

--- a/templates/404.html
+++ b/templates/404.html
@@ -6,7 +6,7 @@
       <div class="column has-text-centered">
         <h1 class="title">404 Page Not Found</h1>
         <p class="subtitle">An unexpected error has occurred.</p>
-        <a class="button" href="{% url 'home' %}">Home</a>
+        <a class="button is-primary" href="{% url 'home' %}">Home</a>
       </div>
     </div>
 </div>
