--- a/templates/404.html
+++ b/templates/404.html
@@ -1,13 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container">
+<section>
+  <div class="container">
     <div class="columns is-vcentered">
       <div class="column has-text-centered">
-        <h1 class="title">404 Page Not Found</h1>
-        <p class="subtitle">An unexpected error has occurred.</p>
-        <a class="button is-primary" href="{% url 'home' %}">Home</a>
+        <div class="box">
+          <h1 class="title">404 Page Not Found</h1>
+          <p class="subtitle">An unexpected error has occurred.</p>
+          <br />
+          <a class="button is-primary" href="{% url 'home' %}">Home</a>
+          <br />
+        </div>
       </div>
     </div>
-</div>
+  </div>
+</section>
 {% endblock %}
