Add issue view for future comics

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -29,6 +29,12 @@
             </span>
             <span>Next Week</span>
           </a>
+          <a class="navbar-item" href="{% url 'issue:future' %}">
+            <span class="icon">
+              <i class="fas fa-gem"></i>
+            </span>
+            <span>Future</span>
+          </a>
         </div>
       </div>
       <div class="navbar-item has-dropdown is-hoverable">
