Fix title on future release view

--- a/comicsdb/templates/comicsdb/week_list.html
+++ b/comicsdb/templates/comicsdb/week_list.html
@@ -11,8 +11,11 @@
 <section class="hero">
   <div class="hero-body">
     <div class="container has-text-centered">
-      <h1 class="title is-3">Comic{{ issue_list.count|pluralize }} released the week of {{ release_day|date:'F d, Y' }}
-      </h1>
+      {% if not future %}
+      <h1 class="title is-3">Comic{{ issue_list.count|pluralize }} released the week of {{ release_day|date:'F d, Y' }}</h1>
+      {% else%}
+      <h1 class="title is-3">Future releases</h1>
+      {% endif %}
     </div>
   </div>
 </section>
