--- a/comicsdb/templates/comicsdb/publisher_detail.html
+++ b/comicsdb/templates/comicsdb/publisher_detail.html
@@ -122,20 +122,19 @@
         <h1 class="title is-5">Summary</h1>
         {% if publisher.desc %}
           <p>{{ publisher.desc|linebreaksbr }}</p>
-          {% if publisher.wikipedia %}
-              <br/>
-              <div class="content is-small">
-                This article uses material from the Wikipedia article
-                <a href="https://en.wikipedia.org/wiki/{{ publisher.wikipedia}}">
-                  "{{ publisher.wikipedia }}"
-                </a>
-                , which is released under the
-                <a href="https://creativecommons.org/licenses/by-sa/3.0/">
-                  Creative Commons Attribution-Share-Alike License 3.0
-                </a>.
-              </div>
-          {% else %}
-          <br/>
+          {% if publisher.attribution %}
+            {% for w in publisher.wikipedia %}
+                <br/>
+                <div class="content is-small">
+                  This article uses material from <a href={{w.url}}>Wikipedia</a>, 
+                  which is released under the
+                  <a href="https://creativecommons.org/licenses/by-sa/3.0/">
+                    Creative Commons Attribution-Share-Alike License 3.0
+                  </a>.
+                </div>
+            {% empty %}
+            <br/>
+            {% endfor %}
           {% endif %}
         {% else %}
            <p>No information available.</p>
