--- a/comicsdb/templates/comicsdb/team_detail.html
+++ b/comicsdb/templates/comicsdb/team_detail.html
@@ -120,20 +120,19 @@
         <h1 class="title is-5">Summary</h1>
         {% if team.desc %}
           <p>{{ team.desc|linebreaksbr }}</p>
-          {% if team.wikipedia %}
-              <br/>
-              <div class="content is-small">
-                This article uses material from the Wikipedia article
-                <a href="https://en.wikipedia.org/wiki/{{ team.wikipedia}}">
-                  "{{ team.wikipedia }}"
-                </a>
-                , which is released under the
-                <a href="https://creativecommons.org/licenses/by-sa/3.0/">
-                  Creative Commons Attribution-Share-Alike License 3.0
-                </a>.
-              </div>
-          {% else %}
+          {% if team.attribution %}
+            {% for w in team.wikipedia %}
+                <br/>
+                <div class="content is-small">
+                  This article uses material from <a href={{w.url}}>Wikipedia</a>, 
+                  which is released under the
+                  <a href="https://creativecommons.org/licenses/by-sa/3.0/">
+                    Creative Commons Attribution-Share-Alike License 3.0
+                  </a>.
+                </div>
+            {% empty %}
             <br/>
+            {% endfor %}
           {% endif %}
         {% else %}
            <p>No information available.</p>
